stories/Components/Forms/Inputfields/input-group.scss
@import '../../../assets/scss/mixins';
@import '../../../assets/scss/breakpoints';
@import '../../../assets/scss/variables';

.input-group {
  label {
    @extend %paragragh-font-20;

    display: block;
    margin-bottom: $spacing-08;
  }

  .help {
    color: $color-gray-500;
    display: block;
    font-size: $font-size-14;
    margin-bottom: 0;
  }

  .error {
    color: $color-red;
    font-size: $font-size-16;
    margin-bottom: 0;
  }

  &.disabled {
    label,
    .help {
      color: $color-gray-400;
    }

    input[type=text],
    input[type=number],
    input[type=email],
    input[type=password],
    input[type=search],
    input[type=tel],
    input[type=date],
    textarea {
      background-color: $color-white;
      border: 2px solid $color-gray-400;
      color: $color-gray-400;

      &::placeholder {
        color: $color-gray-400;
      }
    }

    input[type=date] {
      background-image: url(#{$img-path-Icon}/datedisabled.svg);
    }

    input[type=search] {
      background-image: url(#{$img-path-Icon}/Searchgray.svg);
    }
  }

  input[type=text],
  input[type=number],
  input[type=email],
  input[type=password],
  input[type=search],
  input[type=tel],
  input[type=date],
  textarea {
    @extend %background-white;

    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    border: 2px solid $color-black;
    border-radius: 0;
    box-sizing: border-box;
    font-size: $font-size-16;
    height: 46px;
    margin-bottom: $spacing-24;
    padding: 0.625rem;
    width: 100%;

    &::placeholder {
      color: $color-gray-500;
    }
    &:focus {
      box-shadow: 0 0 4px $color-blue-800;
      outline: 0;
    }

    input[type=date],
    input[type=search] {
      padding-left: $spacing-40;
      position: relative;
    }
  }

  input[type=search] {
    background: url(#{$img-path-Icon}/Search_black.svg) no-repeat left 14px bottom 12px;
    color: #a9b1b7;
    padding-left: 2.5rem;
  }

  textarea {
    height: auto;
    margin-bottom: 0;
    max-width: 100%;
    resize: vertical;
  }

  input[type=date] {
    background:
      url(#{$img-path-Icon}/calender_black.svg) no-repeat left
      14px bottom 12px;
    color: $color-gray-500;
    padding-left: $spacing-40;
    background-color: $color-white;
  }

  &.error {
    input[type=text],
    input[type=number],
    input[type=email],
    input[type=password],
    input[type=search],
    input[type=tel],
    input[type=date],
    textarea {
      border: 2px solid $color-red;
    }
  }
}

input[type='date']::-webkit-calendar-picker-indicator {
  appearance: none;
  left: 3px;
  opacity: 0;
  position: absolute;
}

[dir='rtl'] {
  .input-group {
    input[type=text],
    input[type=number],
    input[type=email],
    input[type=password],
    input[type=search],
    input[type=tel],
    input[type=date],
    textarea {
      @media (hover: none) and (pointer: coarse) {
        input[type=date] {
          padding-right: $spacing-24;
        }
      }
    }

    input[type=date],
    input[type=search] {
      background:
        url(#{$img-path-Icon}/calender_black.svg) no-repeat
        right 14px bottom 12px;
      padding-left: 0.635rem;
      padding-right: $spacing-40;
      text-align: right;
      background-color: $color-white;
    }

    input[type=search] {
      background:
        url(#{$img-path-Icon}/Search_black.svg) no-repeat
        right 14px bottom 12px;
    }

    &.disabled {
      input[type=date] {
        background-image: url(#{$img-path-Icon}/datedisabled.svg);
      }

      input[type=search] {
        background-image: url(#{$img-path-Icon}/Searchgray.svg);
      }
    }
  }

  input[type='date']::-webkit-calendar-picker-indicator {
    left: inherit;
    position: absolute;
    right: 27px;
  }

  input::-webkit-date-and-time-value {
    text-align: right;
    margin-right: 0;
  }
}

// burmese lang
:lang(my) {
  .input-group .error {
    line-height: 1.7;
  }
}

